--- a/caasp-admin-node/cloud_init.cfg
+++ b/caasp-admin-node/cloud_init.cfg
@@ -41,25 +41,31 @@ users:
     groups: users
 
 runcmd:
-  - [ SUSEConnect, -r, INTERNAL-USE-ONLY-e62a127779ce75cc ]
-  - [ SUSEConnect, -p, sle-module-containers/15.1/x86_64 ]
-  - [ SUSEConnect, -p, caasp/4.0/x86_64, -r, INTERNAL-USE-ONLY-e62a127779ce75cc ]
-  - [ zypper, --non-interactive, install, -t, pattern, SUSE-CaaSP-Management ]
 
-#  - [ SUSEConnect, --url, http://rmt.suse.hpc.local ]
-#  - [ SUSEConnect, -p, sle-module-containers/15.1/x86_64 ]
-#  - [ SUSEConnect, -p, caasp/4.0/x86_64, --url, http://rmt.suse.hpc.local ]
+  - SUSEConnect --url http://rmt.suse.hpc.local
+  - SUSEConnect -p sle-module-containers/15.1/x86_64
+  - SUSEConnect -p caasp/4.0/x86_64 --url http://rmt.suse.hpc.local
+  - zypper --non-interactive install -t pattern SUSE-CaaSP-Management
 
+write_files:
+  - path: /home/sles/.all_nodes
+    permissions: "0644"
+    content: |
+      caasp-lb-0.caasp-susecon.lab
+      caasp-master-0.caasp-susecon.lab
+      caasp-worker-0.caasp-susecon.lab
+      caasp-worker-1.caasp-susecon.lab
+    owner: sles:users
 
 bootcmd:
   - ip addr add 10.110.0.10/22 dev eth0
   - ip route add default via 10.110.0.1 dev eth0
+  - echo search caasp-terraformsusecon-hol.lab >> /etc/resolv.conf
+  - echo nameserver 10.110.0.1 >> /etc/resolv.conf
 #  - ip addr add 172.16.241.254/24 dev eth1
 #  - ip link add link eth1 name vlan240 type vlan id 240
 #  - ip link set up vlan240
 #  - ip addr add 172.16.240.254/24 dev vlan240
-  - echo search caasp-terraformsusecon-hol.lab >> /etc/resolv.conf
-  - echo nameserver 10.110.0.1 >> /etc/resolv.conf
 #  - echo search caasp-cloud.com >> /etc/resolv.conf
 #  - echo nameserver 172.16.250.2 >> /etc/resolv.conf
 #  - echo "default 172.16.240.1 - -" > /etc/sysconfig/network/routes
