--- a/caasp-admin-node/cloud_init.cfg
+++ b/caasp-admin-node/cloud_init.cfg
@@ -46,16 +46,16 @@ runcmd:
   - SUSEConnect -p sle-module-containers/15.1/x86_64
   - SUSEConnect -p caasp/4.0/x86_64 --url http://rmt.suse.hpc.local
   - zypper --non-interactive install -t pattern SUSE-CaaSP-Management
+  - chown -R sles:users /home/sles
 
 write_files:
   - path: /home/sles/.all_nodes
     permissions: "0644"
     content: |
-      caasp-lb-0.caasp-susecon.lab
+      caasp-lb.caasp-susecon.lab
       caasp-master-0.caasp-susecon.lab
       caasp-worker-0.caasp-susecon.lab
       caasp-worker-1.caasp-susecon.lab
-    owner: sles:users
 
 bootcmd:
   - ip addr add 10.110.0.10/22 dev eth0
