--- a/caasp-admin-node/cloud_init.cfg
+++ b/caasp-admin-node/cloud_init.cfg
@@ -20,16 +20,22 @@ chpasswd:
 
 hostname: caasp-admin
 
+###Placing this in a network.cfg file has been tested elsewhere and works correctly (as long as network-config-file in TF doesn't disable networking)
 #network:
-#  version: 2
-#  ethernets: 
-#    eth0:
-#      addresses: 
-#        - 172.16.241.254/24
-#      gateway4: 172.16.241.1
-#      nameservers:
-#        search: [caasp-cloud.com]
-#        addresses: [172.16.250.2]
+#  version: 1
+#  config:
+#    - type: physical
+#      name: eth0
+#      subnets:
+#         - type: static
+#           address: 172.16.240.XYZ/24
+#           gateway: 172.16.240.1
+#    - type: nameserver
+#      address:
+#        - 172.16.250.2
+#      search:
+#        - susecon.local
+
 
 users:
   - name: sles
@@ -58,6 +64,7 @@ write_files:
       caasp-worker-1.caasp-susecon.lab
 
 bootcmd:
+## This works but it's better to do this with a network.cfg file (see above)
   - ip addr add 10.110.0.10/22 dev eth0
   - ip route add default via 10.110.0.1 dev eth0
   - echo search caasp-terraformsusecon-hol.lab >> /etc/resolv.conf
