--- a/AWS/k3s/k3s_edge_sandbox.conf
+++ b/AWS/k3s/k3s_edge_sandbox.conf
@@ -2,4 +2,5 @@
 #VPC_CIDR	node name	# instance_type for server/agent	labels:
 10.0.0.0/16        test-1-server-0 # instance_type="t2.small"
 10.0.0.0/16        test-1-server-1 
+10.0.0.0/16        test-1-server-2 
 
