--- a/AWS/eks-clusters/nginx-default-sc-load-balancer-svc-test.yaml
+++ b/AWS/eks-clusters/nginx-default-sc-load-balancer-svc-test.yaml
@@ -57,3 +57,5 @@ spec:
   selector:
     app: nginx
   type: LoadBalancer
+
+## Test with curl to port 8080 on the assigned load balancer IP address
